Added a method to choice of auth user provider Added a method to know if a user is impersonated Added a method to know the impersonator name

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,13 @@
 {
-    "name": "sboo/multiauth",
+    "name": "esalazarv/multiauth",
     "description": "Multiple auth driver for Laravel 5",
 	"keywords": ["laravel", "laravel 5", "multi", "auth"],
 	"license": "MIT",
     "authors": [
+        {
+          "name": "Eduardo Salazar",
+          "email": "eduardosalazar89@hotmail.es"
+        },
         {
           "name": "Ramon Ackermann",
           "email": "ramon.ackermann@sboo.eu"
